--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>{{helpText}}</p>
+        <img class="portrait" src="/img/ommy.JPG">
     </div>
 
     {{>footer}}
