--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was created by Wee. It uses data from mapbpx.com and weatherstack.com!</p>
+        <p>This site was created by Wee.</p>
         <img class="portrait" src="/img/me.JPG">
     </div>
     
