--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Use this site to get your weather!</p>
+        <img class="weather-pic" src="/img/weather-news.png">
+        <p>Location:</p>
 
         <form>
             <input placeholder="Location">
