--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Weather</title>
+    <title>Weather App</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/style.css">
 </head>
